js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
}
